[workspace]
members = [
    "nysa",
    "nysa-macro",
    "solidity-parser"
]

exclude = [ 
    "examples/owned-token/native-odra", 
    "examples/owned-token/nysa", 
    "examples/status-message/native-odra", 
    "examples/status-message/nysa", 
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true