[workspace]
members = [
    "nysa",
    "nysa-macro",
    "nysa-types",
    "solidity-parser"
]

exclude = [ 
    "examples/capped-erc20", 
    "examples/owned-token/native-odra", 
    "examples/owned-token/nysa", 
    "examples/owned-token/soroban", 
    "examples/status-message/native-odra", 
    "examples/status-message/native-soroban", 
    "examples/status-message/nysa",
    "examples/status-message/soroban"
]

resolver = "2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true