[package]
name = "example-status"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { path = "../../odra/core", default-features = false }

[build-dependencies]
nysa = { path = "../nysa", features = ["builder"] }
quote = "1.0.32"

[features]
default = ["solidity", "mock-vm"]
native-odra = []
solidity = []
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]

[[bin]]
name = "casper_gen"
path = "src/bin/casper_gen.rs"

[[bin]]
name = "status_message"
path = "src/status_message_wasm.rs"
