[package]
name = "nysa-types"
version = "0.1.0"
edition = "2021"

[dependencies]
ruint = { version = "1.10.1", default-features = false, features = ["alloc"] }
odra-types = { path = "../../odra/types", optional = true }
num-bigint = { version = "0.4.4", default-features = false }

[features]
default = []
odra = ["odra-types"]