[package]
name = "nysa"
version = "0.1.0"
edition = "2021"

[dependencies]
solidity-parser = { path = "../solidity-parser" }
# c3-lang-parser = "0.0.4"
# c3-lang-linearization = "0.0.4"
c3-lang-parser = { path = "../../c3-lang/c3-lang-parser" }
c3-lang-linearization = { path = "../../c3-lang/c3-lang-linearization" }
quote = "1.0.21"
syn = "1.0.99"
proc-macro2 = "1.0.43"
convert_case = "0.6.0"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.2"

[features]
default = ["builder"]
builder = []