[package]
name = "nysa"
version = "0.1.0"
edition = "2021"

[dependencies]
solidity-parser = { path = "../solidity-parser" }
c3-lang-parser = { git = "https://github.com/odradev/c3-lang", branch = "feature/odra-support" }
c3-lang-linearization = { git = "https://github.com/odradev/c3-lang", branch = "feature/odra-support" }
quote = "1.0.21"
syn = "1.0.99"
proc-macro2 = "1.0.43"
convert_case = "0.6.0"
lazy_static = "1.4.0"
itertools = "0.11.0"
num-traits = "0.2.16"

[dev-dependencies]
pretty_assertions = "1.2"
prettyplease = "0.1.25"

[features]
default = ["builder"]
builder = []