[package]
name = "capped-erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra/", branch = "release/0.6.0", default-features = false }

[build-dependencies]
nysa = { path = "../../nysa", features = ["builder"] }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]

