[package]
name = "capped-erc20-client"
version = "0.1.0"
edition = "2021"

[dependencies]
odra-casper-shared = { path = "../../../../odra/odra-casper/shared" }
blake2 = { version = "0.9.2", default-features = false }
casper-types = "3.0.0"

[features]
default = []

[[bin]]
name = "client"
path = "main.rs"
