[package]
name = "nysa-owned-token"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "0.8.0", path = "../../../../odra/odra", default-features = false }
nysa-types = { path = "../../../nysa-types", features = ["odra"] }

[dev-dependencies]
odra-test = { version = "0.8.0", path = "../../../../odra/odra-test" }

[build-dependencies]
nysa = { path = "../../../nysa", features = ["builder"] }
