[package]
name = "nysa-example-status"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { path = "../../../../odra/core", default-features = false }
nysa-types = { path = "../../../nysa-types", features = ["odra"] }

[build-dependencies]
nysa = { path = "../../../nysa", features = ["builder"] }

[features]
default = ["mock-vm"]
mock-vm = ["odra/mock-vm"]
casper = ["odra/casper"]
