[package]
name = "soroban-nysa-example-status"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=20.3.0"

[dev_dependencies]
soroban-sdk = { version = "=20.3.0", features = ["testutils"] }

[build-dependencies]
nysa = { path = "../../../nysa", features = ["builder"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true