[package]
name = "builder"
edition = "2021"
version = "1.0.0"

[workspace]
members = []

[dependencies.odra]
path = "../../../../../odra/core"
features = ["casper"]
default-features = false

[dependencies.odra-owned-token]
path = "/home/kpob/workspace/rust/odra/nysa/examples/owned-token/native-odra/"
features = ["casper"]
default-features = false

[[bin]]
path = "src/contracts_build.rs"
name = "contracts_build"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []

[[bin]]
path = "src/owned_token_wasm.rs"
name = "owned_token"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []
