[package]
name = "builder"
edition = "2021"
version = "1.0.0"

[workspace]
members = []

[dependencies.odra]
path = "../../../../../odra/core"
features = ["casper"]
default-features = false

[dependencies.odra-example-status]
path = "/home/kpob/workspace/rust/odra/nysa/examples/status-message/native-odra/"
features = ["casper"]
default-features = false

[[bin]]
path = "src/contracts_build.rs"
name = "contracts_build"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []

[[bin]]
path = "src/status_message_wasm.rs"
name = "status_message"
test = false
doctest = false
bench = false
doc = false
edition = "2021"
required-features = []
